package de.fhmaze.engine.action.result;

public final class BlockedActionResult extends NotOkayActionResult {}
