package de.fhmaze.engine.action.result;

public final class EmptyActionResult extends NotOkayActionResult {}
