package de.fhmaze.engine.action.result;

public non-sealed class NotOkayActionResult implements ActionResult {}
