package de.fhmaze.engine.action.result;

public final class NotSupportedActionResult extends NotOkayActionResult {}
