package de.fhmaze.engine.action.result;

public final class NotYoursActionResult extends NotOkayActionResult {}
