package de.fhmaze.engine.action.result;

public final class TakingActionResult extends NotOkayActionResult {}
