package de.fhmaze.engine.action.result;

public final class TalkingActionResult extends NotOkayActionResult {}
