package de.fhmaze.engine.action.result;

public final class WrongOrderActionResult extends NotOkayActionResult {}
