@startuml action.result.failure

' config includes
!include ../../config/macros.iuml
!include ../../config/styles.iuml

' diagram includes
!include action.result.puml

' class diagram (https://plantuml.com/class-diagram)
$package(engine.action.result.failure) {
    class NotOkayActionResult <<leaf>>
    engine.action.result.FailureActionResult <|.. NotOkayActionResult

    class BlockedActionResult <<leaf>>
    engine.action.result.FailureActionResult <|.. BlockedActionResult

    class WrongOrderActionResult <<leaf>>
    engine.action.result.FailureActionResult <|.. WrongOrderActionResult

    class NotYoursActionResult <<leaf>>
    engine.action.result.FailureActionResult <|.. NotYoursActionResult

    class EmptyActionResult <<leaf>>
    engine.action.result.FailureActionResult <|.. EmptyActionResult

    class TalkingActionResult <<leaf>>
    engine.action.result.FailureActionResult <|.. TalkingActionResult

    class TakingActionResult <<leaf>>
    engine.action.result.FailureActionResult <|.. TakingActionResult

    class NotSupportedActionResult <<leaf>>
    engine.action.result.FailureActionResult <|.. NotSupportedActionResult
}

@enduml
